[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acdsee-toolkit"
version = "0.4.2"
description = "Python toolkit for automating ACDSee image workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ACDSee Toolkit Contributors"}
]
keywords = ["acdsee", "image", "photo", "metadata", "exif", "workflow", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "Pillow>=9.0",
    "piexif>=1.1.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
analysis = [
    "imagehash>=4.3",
    "numpy>=1.22",
    "pandas>=1.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/acdsee-toolkit/acdsee-toolkit"
Documentation = "https://github.com/acdsee-toolkit/acdsee-toolkit#readme"
Repository = "https://github.com/acdsee-toolkit/acdsee-toolkit"
Issues = "https://github.com/acdsee-toolkit/acdsee-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["acdsee_toolkit*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
